--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "This web application allows users to view their clients",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "firebase serve"
     },
     "keywords": [],
     "author": "",
