--- a/package.json
+++ b/package.json
@@ -5,9 +5,19 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "firebase serve"
+        "start:frontend": "firebase serve",
+        "start:backend": "nodemon public/back.cjs"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.27.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "express": "^4.18.0",
+        "firebase": "^9.6.11",
+        "nodemon": "^2.0.15"
+    },
+    "type": "module"
 }
