--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "firebase": "^9.6.11",
         "nodemon": "^2.0.15"
     },
-    "type": "module"
+    "type": "module",
+    "devDependencies": {
+        "webpack": "^5.72.0",
+        "webpack-cli": "^4.9.2"
+    }
 }
