--- a/firebase.json
+++ b/firebase.json
@@ -4,12 +4,9 @@
         "indexes": "firestore.indexes.json"
     },
     "hosting": {
+        "site": "clientmap",
         "public": "dist",
-        "ignore": [
-            "firebase.json",
-            "**/.*",
-            "**/node_modules/**"
-        ]
+        "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
     },
     "emulators": {
         "auth": {
