--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,14 @@
     "hosting": {
         "site": "clientmap",
         "public": "dist",
-        "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+        "ignore": [
+            "firebase.json",
+            "**/.*",
+            "**/node_modules/**"
+        ]
+    },
+    "functions": {
+        "port": "5001"
     },
     "emulators": {
         "auth": {
