--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start:frontend": "firebase serve",
-        "start:backend": "nodemon public/back.cjs"
+        "start:backend": "nodemon src/back.cjs"
     },
     "keywords": [],
     "author": "",
@@ -17,6 +17,7 @@
         "dotenv": "^16.0.0",
         "express": "^4.18.0",
         "firebase": "^9.6.11",
+        "joi": "^17.6.0",
         "nodemon": "^2.0.15"
     },
     "devDependencies": {
