--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@google-cloud/secret-manager": "^3.12.0",
         "axios": "^0.27.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
